[package]
name = "chewbbacca-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
needletail = "0.6"
sha2 = "0.10"
rustc-hash = "2"
csv = "1.3"
crc32fast = "1.4"
cudarc = { version = "0.19", features = ["cuda-13010"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
